<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sync">Sync</string>
    <string name="sync_needed">Sync needed</string>
    <string name="gantt_chart">Gantt Chart</string>
    <string name="more_options">More options</string>
    <string name="settings">Settings</string>
    <string name="sortnote">Sort note</string>
    <string name="insert_timestamp">Insert timestamp</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="unlink">Unlink</string> <!-- Unlink from Dropbox -->
    <string name="clear">Clear</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <!-- "new" is reserved -->
    <string name="set">Set</string>
...
    <string name="dropbox">Dropbox</string>
    <string name="delete">Delete</string>
    <string name="delete_with_quoted_argument">Delete “%s”</string>
    <string name="delete_amount_of_books">Delete %d notebooks</string>
    <string name="name">Name</string>
    <string name="query">Query</string>
    <string name="done">Done</string>
    <string name="mark_as_done">Mark as done</string>
    <string name="mark_as_done_with_repeater">Reschedule %s</string>
    <string name="reminder_snooze">Snooze</string>
    <string name="show_pending_reminders">Show pending reminders</string>
    <string name="close">Close</string>
    <string name="import_">Import</string> <!-- Reserved keyword -->
...
    <string name="default_priority">Default priority</string>
    <string name="lowest_priority">Lowest priority</string>

    <string name="todo_states">Keywords for active (todo) tasks</string>
    <string name="done_states">Keywords for completed (done) tasks</string>

    <string name="use_created_at_property">Use property for created-at time</string>
    <string name="use_created_at_property_summary">Sync created-at time using a property</string>

    <string name="created_at_property">Created-at property</string>

    <string name="properties">Properties</string>
    <string name="property_name">Property name</string>
    <string name="property_value">Property value</string>

    <string name="reminder_for_scheduled">Scheduled: %s</string>
...

    <string name="preface_in_book">Notebook\'s preface</string>
    <string name="preface_in_book_full">Display</string>
    <string name="preface_in_book_hide">Hide</string>
    <string name="preface_in_book_few_lines">Display few lines</string>

    <string name="created_property_name">CREATED</string>

    <string name="separate_notes_with_new_line_always">Always</string>
    <string name="separate_notes_with_new_line_multi_line_notes_only">Multiline notes only</string>
    <string name="separate_notes_with_new_line_never">Never</string>

    <string name="default_notebook">Default notebook</string>
...
